# QwenPaw-FNOS

./: .gitignore  LICENSE  README.md  manifest
app/server/: README.md  pyproject.toml
app/server/qwenpaw/: __init__.py  __main__.py
app/server/qwenpaw/agents/: __init__.py  skills_hub.py
app/server/qwenpaw/agents/acp/: permissions.py  tool_adapter.py  tool_parser.py
app/server/qwenpaw/agents/hooks/: __init__.py  memory_compaction.py
app/server/qwenpaw/agents/memory/: base_memory_manager.py  reme_light_memory_manager.py
app/server/qwenpaw/agents/mission/: __init__.py  handler.py  mission_runner.py
app/server/qwenpaw/agents/tools/: __init__.py  agent_management.py
app/server/qwenpaw/agents/utils/: setup_utils.py
app/server/qwenpaw/app/: auth.py
app/server/qwenpaw/app/channels/: base.py  manager.py
app/server/qwenpaw/app/crons/: executor.py
app/server/qwenpaw/app/routers/: agents.py  config.py  voice.py
app/server/qwenpaw/app/runner/: mission_dispatch.py  runner.py
app/server/qwenpaw/cli/: channels_cmd.py  clean_cmd.py  doctor_connectivity.py  doctor_fix_runner.py  doctor_registry.py  mission_cmd.py  shutdown_cmd.py  skills_cmd.py  uninstall_cmd.py
app/server/qwenpaw/config/: context.py
app/server/qwenpaw/console/: index.html
app/server/qwenpaw/console/assets/: architectureDiagram-VXUJARFQ-CL2nzVDw.js  blockDiagram-VD42YOAC-BTgjDcte.js  c4Diagram-YG6GDRKO-yPRNuV6h.js  chunk-4BX2VUAB-xeqSxfOT.js  chunk-55IACEB6-CMcgBGiL.js  chunk-B4BG7PRW-uZKHRETd.js  chunk-DI55MBZ5-9-WnOKAc.js  chunk-FMBD7UC4-CnpBHnGP.js  (+78 more)
app/server/qwenpaw/envs/: store.py
app/server/qwenpaw/local_models/: model_manager.py
app/server/qwenpaw/plugins/: api.py
app/server/qwenpaw/providers/: ollama_provider.py
app/server/qwenpaw/token_usage/: model_wrapper.py
app/server/qwenpaw/utils/: console_static.py  telemetry.py
app/server/src/qwenpaw/: __version__.py  constant.py  exceptions.py
(+514 files in other folders)
